make navbar items dynamic

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -96,121 +96,11 @@
                       points="816.6519 386.7124 816.6519 527.0091 478.1841 760.5632 302.0575 655.3487 816.6519 386.7124"
                     />
                   </svg>
-                  <ul class="main-header__menu">
+                  <ul class="main-header__menu" id="menus-wrapper">
                     <li class="main-header__item">
-                      <a href="#" class="main-header__link">صفحه اصلی</a>
+                      <a href="./index.html" class="main-header__link">صفحه اصلی</a>
                     </li>
-
-                    <li class="main-header__item">
-                      <a href="./category.html" class="main-header__link"
-                        >فرانت اند
-                        <i class="fas fa-angle-down main-header__link-icon"></i>
-                        <ul class="main-header__dropdown">
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >آموزش Html</a
-                            >
-                          </li>
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >آموزش Css</a
-                            >
-                          </li>
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >آموزش جاوا اسکریپت</a
-                            >
-                          </li>
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >آموزش FlexBox</a
-                            >
-                          </li>
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >آموزش جامع ری‌اکت</a
-                            >
-                          </li>
-                        </ul>
-                      </a>
-                    </li>
-                    <li class="main-header__item">
-                      <a href="./course.html" class="main-header__link"
-                        >امنیت
-                        <i class="fas fa-angle-down main-header__link-icon"></i>
-                        <ul class="main-header__dropdown">
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >آموزش کالی لینوکس</a
-                            >
-                          </li>
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >آموزش پایتون سیاه</a
-                            >
-                          </li>
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >آموزش جاوا اسکریپت سیاه</a
-                            >
-                          </li>
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >آموزش شبکه</a
-                            >
-                          </li>
-                        </ul>
-                      </a>
-                    </li>
-                    <li class="main-header__item">
-                      <a href="./blog.html" class="main-header__link"
-                        >مقالات
-                        <i class="fas fa-angle-down main-header__link-icon"></i>
-                        <ul class="main-header__dropdown">
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >توسعه وب</a
-                            >
-                          </li>
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >جاوا اسکریپت</a
-                            >
-                          </li>
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >فرانت اند</a
-                            >
-                          </li>
-                        </ul>
-                      </a>
-                    </li>
-                    <li class="main-header__item">
-                      <a href="#" class="main-header__link"
-                        >پایتون
-                        <i class="fas fa-angle-down main-header__link-icon"></i>
-                        <ul class="main-header__dropdown">
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >دوره متخصص پایتون</a
-                            >
-                          </li>
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >دوره هوش مصنوعی با پایتون</a
-                            >
-                          </li>
-                          <li class="main-header__dropdown-item">
-                            <a href="#" class="main-header__dropdown-link"
-                              >دوره متخصص جنگو</a
-                            >
-                          </li>
-                        </ul>
-                      </a>
-                    </li>
-                    <li class="main-header__item">
-                      <a href="#" class="main-header__link">مهارت های نرم</a>
-                    </li>
+                    <!-- data load from DB -->
                   </ul>
                 </div>
 
