--- a/frontend/course.html
+++ b/frontend/course.html
@@ -738,6 +738,7 @@
     <script src="vendor/FontAwesome5/all.min.js"></script>
     <script src="vendor/Bootstrap/bootstrap.bundle.min.js"></script>
     <script src="./js/shared.js" type="module"></script>
+    <script src="./js/course.js" type="module"></script>
 
 </body>
 </html>
