make course session box and student counter dynamic

--- a/frontend/course.html
+++ b/frontend/course.html
@@ -297,8 +297,7 @@
                         <span class="course-boxes__box-left-title">
                           مدت زمان دوره:
                         </span>
-                        <span class="course-boxes__box-left--subtitle">
-                          19 ساعت
+                        <span class="course-boxes__box-left--subtitle  course-boxes__box-left--time">
                         </span>
                       </div>
                     </div>
@@ -312,8 +311,7 @@
                         <span class="course-boxes__box-left-title">
                           آخرین بروزرسانی:
                         </span>
-                        <span class="course-boxes__box-left--subtitle">
-                          1401/03/02
+                        <span class="course-boxes__box-left--subtitle course-boxes__box-left--last-update">
                         </span>
                       </div>
                     </div>
@@ -327,8 +325,7 @@
                         <span class="course-boxes__box-left-title">
                           روش پشتیبانی
                         </span>
-                        <span class="course-boxes__box-left--subtitle">
-                          آنلاین
+                        <span class="course-boxes__box-left--subtitle course-boxes__box-left--support">
                         </span>
                       </div>
                     </div>
@@ -426,70 +423,10 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                          معرفی دوره
+                          جلسات دوره
                         </button>
                       </h2>
-                      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                        <div class="accordion-body introduction__accordion-body">
-                          <div class="introduction__accordion-right">
-                            <span class="introduction__accordion-count">1</span>
-                            <i class="fab fa-youtube introduction__accordion-icon"></i>
-                            <a href="#" class="introduction__accordion-link">
-                              معرفی دوره + چرا یادگیری کتابخانه ها ضروری است؟
-                            </a>
-                          </div>
-                          <div class="introduction__accordion-left">
-                            <span class="introduction__accordion-time">
-                              18:34
-                            </span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                          معرفی دوره
-                        </button>
-                      </h2>
-                      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                        <div class="accordion-body introduction__accordion-body">
-                          <div class="introduction__accordion-right">
-                            <span class="introduction__accordion-count">1</span>
-                            <i class="fab fa-youtube introduction__accordion-icon"></i>
-                            <a href="#" class="introduction__accordion-link">
-                              معرفی دوره + چرا یادگیری کتابخانه ها ضروری است؟
-                            </a>
-                          </div>
-                          <div class="introduction__accordion-left">
-                            <span class="introduction__accordion-time">
-                              18:34
-                            </span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                          معرفی دوره
-                        </button>
-                      </h2>
-                      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                        <div class="accordion-body introduction__accordion-body">
-                          <div class="introduction__accordion-right">
-                            <span class="introduction__accordion-count">1</span>
-                            <i class="fab fa-youtube introduction__accordion-icon"></i>
-                            <a href="#" class="introduction__accordion-link">
-                              معرفی دوره + چرا یادگیری کتابخانه ها ضروری است؟
-                            </a>
-                          </div>
-                          <div class="introduction__accordion-left">
-                            <span class="introduction__accordion-time">
-                              18:34
-                            </span>
-                          </div>
-                        </div>
+                      <div id="collapseOne" class="accordion-collapse collapse show sessions-wrapper" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                       </div>
                     </div>
                   </div>
@@ -533,7 +470,6 @@
                 <div class="course-info__register">
                   <span class="course-info__register-title">
                     <i class="fas fa-graduation-cap course-info__register-icon"></i>
-                    دانشجوی دوره هستید
                   </span>
                 </div>
               </div>
@@ -546,7 +482,7 @@
                         تعداد دانشجو :
                       </span>
                       <span class="course-info__total-sale-number">
-                        178
+                        
                       </span>
                     </div>
                   </div>
@@ -554,7 +490,7 @@
                     <div class="course-info__total-comment">
                       <i class="far fa-comments course-info__total-comment-icon"></i>
                       <span class="course-info__total-comment-text">
-                        67 دیدگاه
+                        
                       </span>
                     </div>
                     <div class="course-info__total-view">
