add alert to contact-us page

--- a/frontend/contact-us.html
+++ b/frontend/contact-us.html
@@ -341,6 +341,7 @@
     <!--------------------------------  Footer-Section  -------------------------------->
 
     <script src="vendor/FontAwesome5/all.min.js"></script>
+    <script src="./vendor/Swal/sweetalert.min.js"></script>
     <script src="js/contact-us.js" type="module"></script>
 </body>
 </html>
