create comment section

--- a/frontend/course.html
+++ b/frontend/course.html
@@ -698,6 +698,23 @@
                         آموزش پایتون
                       </a>
                     </div>
+                    <div class="col-12">
+                      <span class="footer-widgets__title">اشتراک در خبرنامه</span>
+                      <span class="footer-widgets__text text-center d-block"
+                        >جهت اطلاع از آخرین اخبار و تخفیف های سایت مشترک شوید!</span
+                      >
+                      <form action="#" class="footer-widgets__form">
+                        <input
+                          type="text"
+                          class="footer-widgets__input"
+                          placeholder="ایمیل خود را وارد کنید."
+                          id="news-letter-input"
+                        />
+                        <button type="submit" class="footer-widgets__btn" id="news-letter-submit-btn">
+                          عضویت
+                        </button>
+                      </form>
+                    </div>
   
                     </div>
                   </div>
