develop search page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,8 +127,9 @@
               type="text"
               class="landing__searchbar-input"
               placeholder="جستجو در بین دوره ها ..."
+              id="search-input"
             />
-            <button class="landing__searchbar-btn" type="submit">
+            <button class="landing__searchbar-btn" type="submit" id="search-btn">
               <i class="fas fa-search landing__searchbar-icon"></i>
             </button>
           </div>
