--- a/frontend/search.html
+++ b/frontend/search.html
@@ -39,9 +39,6 @@
                   <li class="top-bar__item">
                     <a href="#" class="top-bar__link">آموزش ری‌اکت</a>
                   </li>
-                  <li class="top-bar__item">
-                    <a href="#" class="top-bar__link">20,000 تومان</a>
-                  </li>
                 </ul>
               </div>
               <div class="top-bar__left">
@@ -52,7 +49,7 @@
                   <i class="fas fa-envelope top-bar__email-icon"></i>
                 </div>
                 <div class="top-bar__phone">
-                  <a href="#" class="top-bar__phone-text top-bar__link">
+                  <a dir="ltr" href="#" class="top-bar__phone-text top-bar__link">
                     09108.....68
                   </a>
                   <i class="fas fa-phone top-bar__phone-icon"></i>
@@ -219,7 +216,7 @@
         <div class="container">
           <div class="courses-header">
             <div class="courses-header__right">
-              <span class="courses-header__title title">جدیدترین دوره ها</span>
+              <span class="courses-header__title title">مرتبط ترین دوره ها</span>
               <span class="courses-header__text">سکوی پرتاپ شما به سمت موفقیت</span>
             </div>
             <div class="courses-header__left">
@@ -247,7 +244,7 @@
   
           <div class="articles-header">
             <div class="articles-header__right">
-              <span class="articles-header__title title">جدیدترین مقاله ها</span>
+              <span class="articles-header__title title">مرتبز ترین مقاله ها</span>
               <span class="articles-header__text">پیش به سوی ارتقای دانش</span>
             </div>
             <div class="articles-header__left">
@@ -367,5 +364,6 @@
     <!--------------------------------  Footer-Section  -------------------------------->
 
     <script src="vendor/FontAwesome5/all.min.js"></script>
+    <script src="js/search.js" type="module"></script>
 </body>
 </html>
