fix some bug in search section

--- a/frontend/search.html
+++ b/frontend/search.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>search results</title>
 
     <link rel="stylesheet" href="vendor/BootStrap/bootstrap.min.css" />
     <link rel="stylesheet" href="vendor/SwiperSlider/swiper.css" />
@@ -230,7 +230,7 @@
           <div class="courses-Courses">
             <div class="container">
               <div class="row" id="courses-container">
-                
+                <!-- courses data -->
               </div>
             </div>
           </div>
@@ -244,7 +244,7 @@
   
           <div class="articles-header">
             <div class="articles-header__right">
-              <span class="articles-header__title title">مرتبز ترین مقاله ها</span>
+              <span class="articles-header__title title">مرتبط ترین مقاله ها</span>
               <span class="articles-header__text">پیش به سوی ارتقای دانش</span>
             </div>
             <div class="articles-header__left">
