--- a/frontend/course.html
+++ b/frontend/course.html
@@ -494,22 +494,24 @@
                 </div>
                 <div class="comments__respond">
                   <div class="comments__score">
-                    <span class="comments__score-title">امتیاز شما</span>
-                    <div class="comments__score-input">
-                      <span class="comments__score-input-text"
-                        >امتیاز خود را انتخاب کنید</span
-                      >
-                      <i class="fas fa-angle-down comments__input-icon"></i>
-                    </div>
+                      <span class="comments__score-title">امتیاز شما</span>
+                      <div class="col-12">
+                        <select id="comment-score">
+                          <option value="5">به دوره امتیاز دهید :)</option>
+                          <option value="5">عالی</option>
+                          <option value="4">خیلی خوب</option>
+                          <option value="3">خوب</option>
+                          <option value="2">قابل قبول</option>
+                          <option value="1">ضعیف</option>
+                        </select>
+                      </div>
                   </div>
                   <div class="comments__respond-content">
-                    <div class="comments__respond-title">دیدگاه شما *</div>
-                    <textarea class="comments__score-input-respond"></textarea>
+                      <div class="comments__respond-title">دیدگاه شما *</div>
+                      <textarea class="comments__score-input-respond"></textarea>
                   </div>
-                  <button type="submit" class="comments__respond-btn">
-                    ارسال
-                  </button>
-                </div>
+                  <button type="submit" class="comments__respond-btn">ارسال</button>
+              </div>
               </div>
               <!-------------------------------- Comments  -------------------------------->
 
@@ -711,6 +713,7 @@
     
     <script src="vendor/FontAwesome5/all.min.js"></script>
     <script src="vendor/Bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="vendor/Swal/sweetalert.min.js"></script>
     <script src="./js/shared.js" type="module"></script>
     <script src="./js/course.js" type="module"></script>
 
