add all courses page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -181,7 +181,7 @@
             >
           </div>
           <div class="courses-header__left">
-            <a href="#" class="courses-header__link">
+            <a href="./courses.html?page=1" class="courses-header__link">
               تمامی دوره ها
               <i class="fas fa-arrow-left courses-header__icon"></i>
             </a>
