add pagination for all courses page

--- a/frontend/courses.html
+++ b/frontend/courses.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>All Courses Page</title>
     <link rel="stylesheet" href="vendor/BootStrap/bootstrap.min.css" />
     <link rel="stylesheet" href="vendor/SwiperSlider/swiper.css" />
     <link rel="stylesheet" href="vendor/FontAwesome5/all.min.css" />
@@ -266,7 +266,7 @@
         </div>
 
         <div class="courses-pagination">
-          <ul class="courses__pagination-list">
+          <ul class="courses__pagination-list" id="courses-pagination">
             <!-- Pagination Data Loaded From JS -->
           </ul>
         </div>
